<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backround_fragment"
    android:clickable="true"
    android:focusable="true"
    tools:context=".Fragments.Manager_AddCoach_Fragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/newCoach"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />


    <GridLayout
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:columnCount="2"
        android:rowCount="7"
        android:useDefaultMargins="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/fullName"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/newCoachName"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/coachName"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:windowSoftInputMode="adjustResize" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/age"
            android:textColor="#000"
            android:textSize="20sp" />

        <NumberPicker
            android:id="@+id/newCoachAge"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/phone"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/newCoachPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/enter_phone"
            android:inputType="phone"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:text="@string/studio"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/newCoachStudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/enter_studio_name"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:text="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/newCoachEmail"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/EnterEmail"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:text="@string/password"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/newCoachPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:text="@string/ConfirmPassword"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/newCoachConfirmPassword"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />


    </GridLayout>


    <Button
        android:id="@+id/newCoachCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="25dp"
        android:background="@drawable/cancelbtn"
        android:text="@string/cancel"
        android:textColor="@color/neonOrange" />

    <Button
        android:id="@+id/newCoachSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="25dp"
        android:background="@drawable/commonbtn"
        android:text="@string/save"
        android:textColor="@color/White" />
</RelativeLayout>