<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backround_bottom_waves"
    tools:context=".Fragments.AddTrainee_Fragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/partOfTeam"
        android:textColor="@color/neonOrange"
        android:textSize="25sp"
        android:textStyle="bold" />


    <GridLayout
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:columnCount="2"
        android:rowCount="7"
        android:useDefaultMargins="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:text="@string/fullName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/CoachName"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/coachName"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:windowSoftInputMode="adjustResize" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:text="@string/age"
            android:textColor="#000"
            android:textSize="20sp" />

        <NumberPicker
            android:id="@+id/coachAge"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:text="@string/phone"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/regPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/enter_phone"
            android:inputType="phone"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:text="@string/studio"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/regStudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/enter_studio_name"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:text="@string/email"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/coachEmail"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/EnterEmail"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:text="@string/password"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/regPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:text="@string/ConfirmPassword"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/regConfirmPassword"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />


    </GridLayout>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/grid"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|right"
        android:layout_marginTop="35dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/register_btn"
        android:contentDescription="@string/add_group"
        android:drawableStart="@drawable/ic_arrow"
        android:paddingStart="15dp" />

</RelativeLayout>