<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backround_fragment"
    android:clickable="true"
    android:focusable="true"
    tools:context=".Fragments.Manager_EditCoachFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/edit_Coach_info"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />


    <GridLayout
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:columnCount="2"
        android:rowCount="4"
        android:useDefaultMargins="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:text="@string/fullName"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/EditCoach_FullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/EnterFullName"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:text="@string/age"
            android:textColor="#000"
            android:textSize="20sp" />

        <NumberPicker
            android:id="@+id/EditCoach_age"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:hint="@string/EnterFullName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:text="@string/phone"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/EditCoach_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/enter_phone"
            android:inputType="phone"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:text="@string/email"
            android:textColor="#000"
            android:textSize="20sp"

            />

        <TextView
            android:id="@+id/EditCoach_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/EnterEmail"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="#000"
            android:textSize="20sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:text="@string/studio"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/editCoach_studio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/EnterEmail"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="#000"
            android:textSize="20sp" />


    </GridLayout>

    <Button
        android:id="@+id/cancel_EditCoach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="25dp"
        android:background="@drawable/cancelbtn"
        android:text="@string/cancel"
        android:textColor="@color/neonOrange" />

    <Button
        android:id="@+id/save_EditCoach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="25dp"
        android:background="@drawable/commonbtn"
        android:text="@string/save"
        android:textColor="@color/White" />


</RelativeLayout>