<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    tools:context=".Fragments.EditInfo_Fragment">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:columnCount="2"
        android:rowCount="6">


        <TextView
            android:id="@+id/fullnameLabel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/fullName"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editFullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/fullName"
            android:hint="@string/fullName"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/ageLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:text="@string/age"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <NumberPicker
            android:id="@+id/editAge"
            android:layout_width="55dp"
            android:layout_height="55dp" />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/EnterEmail"
            android:hint="@string/EnterEmail"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/phoneLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/confirmPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ConfirmPassword"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editConfirmPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ConfirmPassword"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </GridLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/cancel_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/save_edit"
            android:background="@drawable/cancelbtn"
            android:text="@string/cancel"
            android:textColor="@color/neonOrange"
            android:textSize="16sp" />

        <Button
            android:id="@+id/save_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/commonbtn"
            android:text="@string/save"
            android:textColor="@color/White"
            android:textSize="16sp" />


    </RelativeLayout>
</LinearLayout>